--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -1,12 +1,21 @@
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
+/>
+class="col icon-choose "
+
 <div class="d-flex h-100 w-100 justify-content-center align-items-center">
   <div class="settings-container settings-bg">
-    <div class="d-flex align-items-center mt-3 mb-3">
+    <div class="d-flex justify-content-center mt-3 mb-3">
 
-      <i class="fas fa-lg fa-arrow-left back-arrow" id="settings-go-back"></i>
+      <i
+        class="fas fa-lg fa-arrow-left back-arrow align-self-center"
+        id="settings-go-back"
+      ></i>
 
       <h2 class="flex-grow-1 text-center settings-title">Settings(
         <p class="settings-variable">myInfo</p>
-        ) {</h2>
+        ){</h2>
 
     </div>
     <div
@@ -38,39 +47,165 @@
         data-parent="#accordion"
       >
         <div class="d-flex">
-          <form>
+          <form id="edit-user-info">
             <div class="form-group">
-              <label for="exampleInputEmail1">UserName</label>
+              <label for="settings-user-name">UserName</label>
               <input
-                type="email"
+                type="text"
                 class="form-control"
-                id="exampleInputEmail1"
-                aria-describedby="emailHelp"
-                placeholder=""
+                id="settings-user-name"
+                aria-describedby="username"
+                autocomplete=""
               />
 
             </div>
-            <div class="form-group mb-2">
-              <label for="exampleInputPassword1">Bio</label>
-              <input
-                type="password"
-                class="form-control"
-                id="exampleInputPassword1"
-                placeholder=""
-              />
+            <!-- Example single danger button -->
+            <div class="btn-group mt-2 mb-2">
+              <button
+                type="button"
+                class="btn fav-tech-btn dropdown-toggle d-block"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+
+                <img
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-plain.svg"
+                  height="25px"
+                />
+
+                FavoriteTech
+              </button>
+              <ul class="dropdown-menu">
+                <div class="row">
+                  <img
+                    class="col icon-choose"
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/npm/npm-original-wordmark.svg"
+                    height="25px"
+                    alt=""
+                  />
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg"
+                    class="col icon-choose"
+                    height="25px"
+                    alt=""
+                  />
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg"
+                    class="col icon-choose"
+                    height="25px"
+                    alt=""
+                  />
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg"
+                    class="col icon-choose"
+                    height="25px"
+                    alt=""
+                  />
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg"
+                    class="col icon-choose"
+                    height="25px"
+                    alt=""
+                  />
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg"
+                    class="col icon-choose"
+                    height="25px"
+                    alt=""
+                  />
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
+                    class="col icon-choose"
+                    height="25px"
+                    alt=""
+                  />
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/jquery/jquery-original.svg"
+                    class="col icon-choose"
+                    height="25px"
+                    alt=""
+                  />
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg"
+                    class="col icon-choose"
+                    height="25px"
+                    alt=""
+                  />
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg"
+                    class="col icon-choose"
+                    height="25px"
+                    alt=""
+                  />
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg"
+                    class="col icon-choose"
+                    height="25px"
+                    alt=""
+                  /><img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg"
+                    class="col icon-choose"
+                    height="25px"
+                    alt=""
+                  />
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg"
+                    class="col icon-choose"
+                    height="25px"
+                    alt=""
+                  /><img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/chrome/chrome-original.svg"
+                    class="col icon-choose"
+                    height="25px"
+                    alt=""
+                  />
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/webpack/webpack-original.svg"
+                    class="col icon-choose"
+                    height="25px"
+                    alt=""
+                  />
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg"
+                    class="col icon-choose"
+                    height="25px"
+                    alt=""
+                  />
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sequelize/sequelize-original.svg"
+                    class="col icon-choose"
+                    height="25px"
+                    alt=""
+                  />
+                </div>
+              </ul>
             </div>
+
+            <label for="github-account" class="d-block mb-2">Github</label>
+            <input
+              type="text"
+              class="form-control mb-2"
+              id="github-account"
+              aria-describedby="username"
+              autocomplete=""
+            />
+
             <div class="form-group mb-2">
-              <label for="exampleInputPassword1">Profile picture</label>
-              <img src="https://robohash.org/andrew" class="edit-account-img" />
+              <label for="settings-pfp">Profile picture</label>
+              <img src="" class="edit-account-img" id="settings-pfp" />
               <div
                 class="edit-profile-picture rounded-2 px-2 py-1 left-0 bottom-0 ml-2 mb-2 border"
+                id="generate-pfp"
               >
-                Edit
+                GenerateNewPfp
               </div>
             </div>
             <button type="submit" class="btn bg-string">Save Info</button>
+            <button class="btn btn-danger">Delete account</button>
           </form>
+
         </div>
+
       </div>
       {{!  }}
       <div
@@ -178,7 +313,6 @@
     </div>
     <div class="bracket mb-2">}</div>
   </div>
-
 </div>
 
 <script src="js/settings.js"></script>
