--- a/views/room.handlebars
+++ b/views/room.handlebars
@@ -7,16 +7,25 @@
       <div class="container">
         <section class="row">
           <div class="col-md-6 col-9 d-flex align-items-center">
-           
-              <h1 class="main-logo">"Dev HangOut"</h1>
-           
+
+            <h1 class="main-logo">"Dev HangOut"</h1>
+
           </div>
-          <div class="col-md-6 col-3 d-flex align-items-center justify-content-end">
-            <h4 class="mb-0 me-2 d-md-block d-none fw-light">Explore</h4>
+          <div class="col-md-6 col-3 d-flex align-items-center justify-content-end gap-4">
+           
             <button id="account-btn" class="hamburger">
               <div class="bar"></div>
             </button>
-            <img src="/images/icons8-settings-64.png" alt="settings" class="settings" id="settings-link" height="46">
+            <div class="dropdown">
+              <img src="/images/icons8-settings-64.png" alt="settings" class="settings"  height="46">
+              <div class="dropdown-content">
+                <a href="/settings" id="settings-link">Settings</a>
+               
+                <a href="#" id="logout-link">Logout</a>
+               
+              </div>
+            </div>
+
           </div>
         </section>
       </div>
@@ -26,11 +35,9 @@
       <div class="slideout">
         <div class="container h-100">
           <div class="d-flex justify-content-center align-items-center mb-3 mt-2">
-           <img src='' class='account-pfp' id="current-user-pfp" ><img/>
+            <img src='' class='account-pfp' id="current-user-pfp"><img />
             <h2 id="slideout-username" class="slideout-current-username"></h2>
-            {{#if loggedIn}}
-            <a href="#" class="log-in" id="logout-link">Logout</a>
-            {{/if}}
+
           </div>
           <h3 class="accordion-heading">Users</h3>
           <div class="list-container">
@@ -41,25 +48,15 @@
             <ul id="room-list" class="items-list">
               <li>General</li>
               <li>Front-End</li>
-              <li class="active-room">Back-End</li>
+              <li>Back-End</li>
               <li>Dev-Advice</li>
             </ul>
           </div>
         </div>
       </div>
     </div>
-
-    <div class="account-slideout" id="settings-slide">
-      <div class="slideout">
-        <div class="container h-100">
-          <h3 class="hover-btn" id="remove-account">Remove Account</h3>
-        </div>
-      </div>
-    </div>
-
-
     <main class="chat-container container " id="main-chat">
-      <h2 class="room-title" id="room-name"> <span style="color: #949494;"># </span>Back-End</h2>
+      <h2 class="room-title" id="room-name"> <span style="color: #949494;"># </span>{{roomName}}</h2>
       <ul id="messages"></ul>
       <section class="row justify-content-center">
         <div class="col-md-10">
