--- a/views/partials/signup-modal.handlebars
+++ b/views/partials/signup-modal.handlebars
@@ -20,47 +20,17 @@
           autocomplete="on"
           placeholder="Password"
         />
+        <input
+          type="text"
+          name="github-username"
+          id="gitHubUserName"
+          autocomplete="on"
+          placeholder="github - optional"
+        />
+       
         <button class="signup-btn" id="signup-button">Submit</button>
       </form>
       <a href="#" id="login-instead-link"><h6>Login</h6></a>
     </div>
   </div>
 </div>
-{{! 
- <form action="/public/js/logic.js" id="signup-form" class="log-forms">
-        <label
-          for="signUpUserName"
-          class="align-self-start mb-1"
-        >userName</label>
-        <input
-          type="text"
-          name="signup-username"
-          id="signUpUserName"
-          autocomplete="on"
-          placeholder="Username"
-        />
-        <label
-          for="signUpUserName"
-          class="align-self-start mt-2 mb-1"
-        >passWord</label>
-
-        <input
-          type="password"
-          name="password"
-          id="signUpPassword"
-          autocomplete="on"
-          placeholder="Password"
-        />
-
-        <label for="github-username" class="align-self-start mb-1 mt-2">GitHub
-          UserName <span class="optional">- optional</span> </label>
-        <input
-          type="text"
-          name="Github-username"
-          id="github-username"
-          autocomplete="on"
-          placeholder="github"
-        />
-        <div class="favorite-lang">Choose Favorite language</div>
-        <button class="signup-btn" id="signup-button">Submit</button>
-      </form> }}
