--- a/public/css/user-info-modal.css
+++ b/public/css/user-info-modal.css
@@ -1,24 +1,28 @@
-.modal {
-  display: none; /* Hidden by default */
-  position: absolute; /* Stay in place */
-  z-index: 5; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+/* .modal {
+  display: none; 
+  position: absolute; 
+  z-index: 5; 
+  padding-top: 100px; 
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
   background-color: transparent;
-}
+} */
 
 /* Modal Content */
 .modal-content {
+  display: none;
   position: absolute;
-  left: 13%;
+  right: 40%;
   width: 22rem;
-  height: 20rem;
+  height: 19.4rem;
   background-color: #32353b;
   color: #c9d1d9;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 99;
 }
 
 .modal-pfp-styles {
@@ -43,6 +47,10 @@
   outline-width: 0;
 }
 
-.username-modal-styles{
+.username-modal-styles {
   font-size: 1.4rem;
+}
+
+.null {
+  color: #d19a66;
 }
