--- a/views/room.handlebars
+++ b/views/room.handlebars
@@ -1,126 +1,132 @@
 {{#if loggedIn}}
-<div class="modal-blur ">
-  {{else}}
+  <div class="modal-blur ">
+{{else}}
   <div class="modal-blur blur ">
-    {{/if}}
-    <header>
-      <div class="container">
-        <section class="row">
-          <div class="col-md-6 col-9 d-flex align-items-center">
+{{/if}}
+<header>
+  <div class="container">
+    <section class="row">
+      <div class="col-md-6 col-9 d-flex align-items-center">
 
-            <h1 class="main-logo">"Dev HangOut"</h1>
+        <h1 class="main-logo">"Dev HangOut"</h1>
 
-          </div>
-          <div class="col-md-6 col-3 d-flex align-items-center justify-content-end gap-4">
-
-            <button id="account-btn" class="hamburger">
-              <div class="bar"></div>
-            </button>
-            <div class="dropdown">
-              <img src="/images/icons8-settings-64.png" alt="settings" class="settings" height="46">
-              <div class="dropdown-content">
-                <a href="/settings" id="settings-link">Settings</a>
-
-                <a href="#" id="logout-link">Logout</a>
-
-              </div>
-            </div>
-
-          </div>
-        </section>
       </div>
-    </header>
-    <!-- The Modal -->
-    <div id="userInfoModal" class="modal">
+      <div class="col-md-6 col-3 d-flex align-items-center justify-content-end gap-4">
 
-      <!-- Modal content -->
-      <div class="modal-content">
-        <div class="container">
-          <div class="row">
-            <div class="col-12 d-flex justify-content-start mt-4 ms-3">
-              <div class=""><img src="" alt="user profile image" id="modal-pfp" class="modal-pfp-styles"></div>
+        <button id="account-btn" class="hamburger">
+          <div class="bar"></div>
+        </button>
+        <div class="dropdown">
+          <img src="/images/icons8-settings-64.png" alt="settings" class="settings" height="46">
+          <div class="dropdown-content">
+            <a href="/settings" id="settings-link">Settings</a>
 
-              <div class="d-flex flex-column justify-content-end align-items-center">
-                <img src="" class="col-3  " alt="" id="modal-fav-tech">
-                <h5 id="modal-username" class="username-modal-styles text-center mt-3"></h5>
-              </div>
+            <a href="#" id="logout-link">Logout</a>
 
-            </div>
-            <div class="col-12 ">
-              <div class="d-flex align-items-center gap-2 mt-3 mb-2">
-                <h5 class="m-0 ">GitHub</h5> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                  viewBox="0 0 24 24">
-                  <path
-                    d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
-                </svg>
-              </div>
-
-              <a href="">
-                <p id="modal-github"></p>
-              </a>
-            </div>
-
-            <div class="co12 mt-3">
-              <input type="text" id="message-user-input" class="dm-input" placeholder="message @Andrew Howran">
-            </div>
           </div>
         </div>
+
       </div>
-
-    </div>
-    <div class="account-slideout" id="explore-slide">
-
-      <div class="slideout">
-
-        <div class="container h-100">
-          <div class="d-flex justify-content-center align-items-center mb-3 mt-2">
-            <img src='' class='account-pfp' id="current-user-pfp"><img />
-            <h2 id="slideout-username" class="slideout-current-username"></h2>
-
-          </div>
-
-          <h3 class="accordion-heading">Users</h3>
-          <div class="list-container">
-            <ul id="user-list" class="items-list text-right"></ul>
-          </div>
-          <h3 class="accordion-heading">Rooms</h3>
-          <div class="list-container">
-            <ul id="room-list" class="items-list">
-              <li>General</li>
-              <li>Front-End</li>
-              <li>Back-End</li>
-              <li>Dev-Advice</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-    <main class="chat-container container " id="main-chat">
-      <h2 class="room-title" id="room-name"> <span style="color: #949494;"># </span>{{roomName}}</h2>
-      <ul id="messages"></ul>
-      <section class="row justify-content-center">
-        <div class="col-md-10">
-          <form id="chat-form">
-            <input id="chat-input" placeholder="Send a message..."></input>
-            <button>Send <i class="fa fa-caret-right" aria-hidden="true"></i></button>
-          </form>
-        </div>
-      </section>
-    </main>
+    </section>
   </div>
+</header>
 
-  {{#unless loggedIn}}
+
+<!-- Modal content -->
+<div class="modal-content" id="userInfoModal">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 d-flex justify-content-start mt-4 ms-3">
+        <div class=""><img src="" alt="user profile image" id="modal-pfp" class="modal-pfp-styles"></div>
+
+        <div class="d-flex flex-column justify-content-end align-items-center">
+          <img src="" class="col-3  " alt="" id="modal-fav-tech">
+          <h5 id="modal-username" class="username-modal-styles text-center mt-3"></h5>
+        </div>
+
+      </div>
+      <div class="col-12 ">
+        <div class="d-flex align-items-center gap-2 mt-4 mb-2">
+          <h5 class="m-0 ">GitHub</h5> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+            viewBox="0 0 24 24">
+            <path
+              d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+          </svg>
+        </div>
+        <div id="modal-github">
+
+        </div>
+      </div>
+
+      <div class="co12 mt-3">
+        <input type="text" id="message-user-input" class="dm-input" placeholder="message @Andrew Howran">
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="account-slideout" id="explore-slide">
+
+  <div class="slideout">
+
+    <div class="container h-100">
+      <div class="d-flex justify-content-center align-items-center mb-3 mt-2">
+        <img src='' class='account-pfp' id="current-user-pfp"><img />
+        <h2 id="slideout-username" class="slideout-current-username"></h2>
+
+      </div>
+
+      <h3 class="accordion-heading">Users</h3>
+      <div class="list-container">
+        <ul id="user-list" class="items-list text-right"></ul>
+      </div>
+      <h3 class="accordion-heading">Rooms</h3>
+      <div class="list-container">
+        <ul id="room-list" class="items-list">
+          <li>General</li>
+          <li>Front-End</li>
+          <li>Back-End</li>
+          <li>Dev-Advice</li>
+        </ul>
+      </div>
+      <h3 class="accordion-heading">DirectMessages</h3>
+      <div class="list-container">
+        <ul class="dm-list" id="direct-msg-list">
+
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+<main class="chat-container container " id="main-chat">
+  <h2 class="room-title" id="room-name"> <span style="color: #949494;"># </span>{{roomName}}</h2>
+  <ul id="messages"></ul>
+  <section class="row justify-content-center">
+    <div class="col-md-10">
+      <form id="chat-form">
+        <input id="chat-input" placeholder="Send a message..."></input>
+        <button>Send <i class="fa fa-caret-right" aria-hidden="true"></i></button>
+      </form>
+    </div>
+  </section>
+</main>
+</div>
+
+{{#unless loggedIn}}
   {{> login-modal}}
   {{> signup-modal}}
 
   <script src="/js/signup.js"></script>
   <script src="/js/login.js"></script>
-  {{/unless}}
+{{/unless}}
 
-  {{#if loggedIn}}
+{{#if loggedIn}}
   <!-- script tag must be included in html to have access to the socket method -->
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/logout.js"></script>
   <script src="/js/user-info-modal.js"></script>
-  {{/if}}
-  <script src="/js/logic.js"></script>
+  <script src="/js/direct-messages.js"></script>
+{{/if}}
+<script src="/js/logic.js"></script>
